force-app/main/default/objects/State_Spas_Price_List__c/State_Spas_Price_List__c.object-meta.xml
<CustomObject>
    <description>Deprecation. Need to delete object. There are several dependencies that need updating</description>
    <label>State Spas Price List</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Spas Price List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>