force-app/main/default/objects/State_Spas_Price_List__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>Product__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>