force-app/main/default/objects/State_Spas_Price_List__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>State Spas Price List</relationshipLabel>
    <relationshipName>State_Spas_Price_List</relationshipName>
    <type>Lookup</type>
</CustomField>