force-app/main/default/objects/State_Spas_Price_List__c/fields/Price_book__c.field-meta.xml
<CustomField>
    <fullName>Price_book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>State Spas Price List</relationshipLabel>
    <relationshipName>State_Spas_Price_List</relationshipName>
    <type>Lookup</type>
</CustomField>