force-app/main/default/objects/State_Spas_Price_List__c/fields/Price_Book_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry_Id__c</fullName>
    <label>Price Book Entry Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>