force-app/main/default/objects/State_Spas_Price_List__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>State Spas Price List</relationshipLabel>
    <relationshipName>State_Spas_Price_List</relationshipName>
    <type>Lookup</type>
</CustomField>