force-app/main/default/objects/State_Spas_Price_List__c/fields/productid__c.field-meta.xml
<CustomField>
    <fullName>productid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>productid</label>
    <type>Checkbox</type>
</CustomField>