force-app/main/default/objects/State_Spas_Price_List__c/fields/Spa_Price__c.field-meta.xml
<CustomField>
    <fullName>Spa_Price__c</fullName>
    <label>Spa Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>