force-app/main/default/objects/State_Spas_Price_List__c/fields/Update_Sync__c.field-meta.xml
<CustomField>
    <fullName>Update_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Sync</label>
    <type>Checkbox</type>
</CustomField>